infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: okak2006/client:latest
---
# Cluster IP: easy to use URL / Name to manage access to this pod
apiVersion: v1
kind: Service
metadata:
  # if you have multiple services for the same pod make sure a different name is given
  name: client-clusterip-srv
spec:
  # select which pod to expose
  selector:
    app: client
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
