infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: okak2006/comments:latest
---
# Cluster IP: easy to use URL / Name to manage access to this pod
apiVersion: v1
kind: Service
metadata:
  # if you have multiple services for the same pod make sure a different name is given
  name: comments-clusterip-srv
spec:
  # select which pod to expose
  selector:
    app: comments
  type: ClusterIP
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
