infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: okak2006/moderation:latest
---
# Cluster IP: easy to use URL / Name to manage access to this pod
apiVersion: v1
kind: Service
metadata:
  # if you have multiple services for the same pod make sure a different name is given
  name: moderation-clusterip-srv
spec:
  # select which pod to expose
  selector:
    app: moderation
  type: ClusterIP
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
